<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorBlue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:text="@string/detail"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|snap"
                app:titleEnabled="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ci_avatar_detail"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                    <LinearLayout
                        android:id="@+id/lin_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_scrollFlags="scroll|enterAlways|snap">

                        <TextView
                            android:id="@+id/tv_detail_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center_horizontal"
                            android:text="@string/fullname"
                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/tv_detail_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-5dp"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center_horizontal"
                            android:text="@string/user_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                            android:textColor="@android:color/white"
                            android:textStyle="italic" />

                        <ProgressBar
                            android:id="@+id/progressBar_detail"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:visibility="gone" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp"
                        android:paddingTop="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_link" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_light"
                                    android:paddingLeft="25dp"
                                    android:text="@string/html_url"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="13sp" />

                                <TextView
                                    android:id="@+id/tv_detail_url"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginTop="-5dp"
                                    android:fontFamily="@font/poppins_regular"
                                    android:paddingLeft="25dp"
                                    android:text="@string/html_url"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_location" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_light"
                                    android:paddingLeft="25dp"
                                    android:text="@string/location"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="13sp" />

                                <TextView
                                    android:id="@+id/tv_detail_location"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginTop="-5dp"
                                    android:fontFamily="@font/poppins_regular"
                                    android:paddingLeft="25dp"
                                    android:text="@string/location"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_company" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_light"
                                    android:paddingLeft="25dp"
                                    android:text="@string/company"
                                    android:textSize="13sp" />

                                <TextView
                                    android:id="@+id/tv_detail_company"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginTop="-5dp"
                                    android:fontFamily="@font/poppins_regular"
                                    android:paddingLeft="25dp"
                                    android:text="@string/company"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center_horizontal"
                                android:text="@string/followers"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/tv_detail_followers"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:gravity="center_horizontal"
                                android:text="@string/number"
                                android:textColor="@color/colorWhite"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center_horizontal"
                                android:text="@string/following"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/tv_detail_following"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:gravity="center_horizontal"
                                android:text="@string/number"
                                android:textColor="@color/colorWhite"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center_horizontal"
                                android:text="@string/repository"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/tv_detail_repository"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:gravity="center_horizontal"
                                android:text="@string/number"
                                android:textColor="@color/colorWhite"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl_detail"
                android:layout_width="fill_parent"
                android:layout_height="?attr/actionBarSize"
                app:tabIndicatorColor="?android:attr/textColorPrimaryInverse"
                app:tabIndicatorHeight="4dp"
                app:tabSelectedTextColor="?android:attr/textColorPrimaryInverse" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>